--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+# requirements.txt (UPDATE)
 streamlit>=1.30
 numpy>=1.24
 opencv-python-headless>=4.8
 Pillow>=10.0
 reportlab>=4.0
-openai>=1.0.0
+qrcode[pil]>=7.4.2
