--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit>=1.30
-numpy>=1.24
-opencv-python-headless>=4.8
-Pillow>=10.0
-reportlab>=4.0
-openai>=1.0.0
-qrcode[pil]>=7.4.2
+streamlit==1.42.0
+numpy==2.2.2
+opencv-python-headless==4.11.0.86
+Pillow==11.1.0
+reportlab==4.3.1
